@@ -1,5 +1,14 @@
 # This is how I run configure.  You'll want to change the
 # pathnames to match your system, of course
+
+# Remember that if you keep the --enable-sybols, you need to
+# use the thread20d.dll in a Tclsh that has also been compiled
+# with symbols (e.g., tclsh83d.exe).
+
+# If you want to build both debug and non-debug versions, then
+# create "debug" and "release" directories and run configure
+# from in those directories with the appropriate flags.
+
 sh ../configure --enable-threads --enable-symbols \
 	--prefix=//z/install --exec-prefix=//z/install/solaris \
 	--with-tcl=//z/cvs/tcl8.3/win/thread
